# gitlab-duplicator

./: .env.example  Cargo.toml
.github/workflows/: main.yml
src/: main.rs
