[package]
name = "git-repository-mirror-creator"
version = "0.0.1"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
gitlab = "=0.1408.0"
serde = "1.0.195"
serde_json = "1.0.111"
